2004-08-12  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Under appropriate conditions, calling a
	* snit.test     snit::type command with no arguments will create
	* snit.man      an instance with an automatically generated name.
	* README.txt

2004-08-11  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Added the -hasinfo pragma, along with the
	* snit.test     appropriate tests.  Updated documentation.
	* snit.man
	* README.txt

	* snit.tcl      The "configure", "configurelist" and "cget"
	* snit.test     instance methods, along with the "options"
	* snit.man      instance variable, are defined only if the
	* README.txt    type defines at least one option (either
	                locally or by delegation).

2004-08-07  Will Duquette  <will@wjduquette.com>

	* All files     Updated to Snit V0.96 for post-0.95 development.
	                Fixed bug: methods called via [mymethod] can now
	                return exotic return codes, e.g.,
			"return -code break"

2004-08-04  Will Duquette  <will@wjduquette.com>

	* snitfaq.man   Updated the Snit FAQ document.

	* snit.man      Finalized Snit V0.95, and updated the version number
	* snit.tcl      throughout.
	* pkgIndex.tcl
	* README.txt

2004-07-27  Will Duquette  <will@wjduquette.com>

	* snit.man      Updated the manpage to describe the new "pragma"
	                statement.  Also, changed the SNIT acronym in the
	                title to "Simple Now In Tcl", i.e., objects are
	                now simple.

	* snit.tcl	Added another pragma, -canreplace.  If false
	* snit.test     (the default) snit::types can no longer create
	* README.txt    instances which replace existing Tcl commands.
	* snit.man      Setting "pragma -canreplace yes" restores the
	* dictionary    previous behavior.

	* snit.tcl	The type definition statements "variable" and
	* snit.test     "typevariable" now take a "-array" option that
	* README.txt    allows them to initialize array variables with